objects/Visits__c/fields/Location_of_this_Visit__c.field-meta.xml
<CustomField>
    <fullName>Location_of_this_Visit__c</fullName>
    <inlineHelpText>This is brought over when the visit is created. IT DOES NOT AUTOMATICALLY UPDATE.</inlineHelpText>
    <label>Location of this Visit</label>
    <type>TextArea</type>
</CustomField>