objects/Visits__c/fields/M_R_Sheet_Id__c.field-meta.xml
<CustomField>
    <fullName>M_R_Sheet_Id__c</fullName>
    <label>M &amp; R Sheet Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>