objects/Visits__c/fields/Mail_Count__c.field-meta.xml
<CustomField>
    <fullName>Mail_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Mail Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>