objects/Visits__c/fields/Maintenance_Reactive_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Reactive_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last submitt Reactive Sheet</label>
    <referenceTo>Service_Sheet_STD__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>