objects/Visits__c/fields/Maintenance_Reactive_Sheet_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Reactive_Sheet_Numbers__c</fullName>
    <formula>HYPERLINK(&quot;https://eclipse-dental--unifier.sandbox.my.salesforce.com/&quot; &amp; M_R_Sheet_Id__c , Reactive_Sheet_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance &amp; Reactive Sheet Number1</label>
    <type>Text</type>
</CustomField>