objects/Visits__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <formula>Make_New__c</formula>
    <label>Make</label>
    <type>Text</type>
</CustomField>