objects/Visits__c/fields/Make_New__c.field-meta.xml
<CustomField>
    <fullName>Make_New__c</fullName>
    <label>Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>