objects/Visits__c/fields/March__c.field-meta.xml
<CustomField>
    <fullName>March__c</fullName>
    <label>March</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>