objects/Visits__c/fields/Mechanical_Service_Sheet_Number__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Service_Sheet_Number__c</fullName>
    <label>Mechanical Service Sheet Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>