objects/Visits__c/fields/Medisafe_Washer_Disinfector__c.field-meta.xml
<CustomField>
    <fullName>Medisafe_Washer_Disinfector__c</fullName>
    <formula>IF(AND(TEXT(Visit_Type__c)  = &quot;Service&quot;,TEXT( Service_Type__c ) = &quot;Medisafe Washer Disinfector&quot;), 
HYPERLINK (&quot;/a0A/e?CF00N580000064xWJ=&quot;&amp; Name&amp;&quot;&amp;CF00N580000064xWJ_lkid=&quot;&amp;Id&amp;&quot;&amp;retURL=%2F&quot;&amp;Id&amp;&quot;&amp;RecordType=0124E0000000Ast&amp;ent=01I58000000NqwK&amp;CF00N580000064xWH=&quot;&amp; Site__r.Name &amp;&quot;&amp;CF00N580000064xWH_lkid=&quot;&amp;Site__r.Id&amp;&quot;&amp;CF00N580000064xeI=&quot;&amp;Engineer2__r.Name&amp;&quot;&amp;CF00N28000001aGZp_lkid=&quot;&amp;Engineer2__r.Id&amp;&quot;&amp;00N580000064xeD=&quot;&amp; Site__r.Visit_Confirmation_Email_to__c&amp;&quot;&amp;CF00N580000064xiC=&quot;&amp;Site_Contract__r.Name&amp;&quot;&amp;CF00N580000064xiC_lkid=&quot;&amp; Site_Contract__r.Id&amp;&quot;&amp;00N4E000000rqWQ=&quot;&amp; Make__c&amp;&quot;&amp;00N4E000000rqWV=&quot;&amp; Model__c&amp;&quot;&amp;00N4E000000rqWk=&quot;&amp; Serial_Number__c,IMAGE(&quot;/servlet/servlet.FileDownload?file=0154E000000DMcs&quot;, &quot;Service&quot;)),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Medisafe Washer Disinfector</inlineHelpText>
    <label>__</label>
    <type>Text</type>
</CustomField>