objects/Visits__c/fields/Message_to_Technician__c.field-meta.xml
<CustomField>
    <fullName>Message_to_Technician__c</fullName>
    <inlineHelpText>If you put a message here it will appear in the Message field in the Engineer&apos;s view, highlighted with ****  ****</inlineHelpText>
    <label>Assets to service/install</label>
    <type>TextArea</type>
</CustomField>