objects/Visits__c/fields/Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Meter_Reading__c</fullName>
    <label>Meter Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>