objects/Visits__c/fields/MobileLinkTestformula__c.field-meta.xml
<CustomField>
    <fullName>MobileLinkTestformula__c</fullName>
    <formula>HYPERLINK(&quot;salesforce1://sObject/a0A4E000001lN6d/edit&quot;,&quot;Salesforce1&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MobileLinkTest</label>
    <type>Text</type>
</CustomField>