objects/Visits__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>Model_New__c</formula>
    <label>Model</label>
    <type>Text</type>
</CustomField>