objects/Visits__c/fields/Model_New__c.field-meta.xml
<CustomField>
    <fullName>Model_New__c</fullName>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>