objects/Visits__c/fields/Next_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Next_30_Days__c</fullName>
    <formula>HYPERLINK(
&quot;https://ap2.salesforce.com/00O28000001PDNb?pv0=&quot;&amp;   Engineer2__r.Name &amp;&quot;&amp;pv1=&quot;&amp;Engineer2__r.Name, &quot;First Technician&quot; ,&quot;_blank&quot;)
&amp;BR()&amp;

HYPERLINK(
&quot;https://ap2.salesforce.com/00O28000001PDNb?pv0=&quot;&amp;   X2nd_Technician__r.Name &amp;&quot;&amp;pv1=&quot;&amp;X2nd_Technician__r.Name, &quot;Second Technician&quot; ,&quot;_blank&quot;)
&amp;BR()&amp;

HYPERLINK(
&quot;https://ap2.salesforce.com/00O28000001PDNo?pv0=&quot;&amp;   Engineer2__r.Name  &amp;&quot;&amp;pv1=&quot;&amp;X2nd_Technician__r.Name, &quot;Both&quot; ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the Technician for the week before and week after the Actual Service Date</inlineHelpText>
    <label>Next 30 Days</label>
    <type>Text</type>
</CustomField>