objects/Visits__c/fields/Next_Contact_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Contact_Date_Time__c</fullName>
    <label>Next Contact Date/Time</label>
    <type>DateTime</type>
</CustomField>