objects/Visits__c/fields/Next_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled__c</fullName>
    <formula>Next_Visit__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Scheduled Visit</label>
    <type>Date</type>
</CustomField>