objects/Visits__c/fields/Next_Visit__c.field-meta.xml
<CustomField>
    <fullName>Next_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Scheduled Visit</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Visits (Next Visit)</relationshipLabel>
    <relationshipName>Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>