objects/Visits__c/fields/Next_Visit_Example__c.field-meta.xml
<CustomField>
    <fullName>Next_Visit_Example__c</fullName>
    <label>Next Visit Example</label>
    <length>100</length>
    <type>Text</type>
</CustomField>