objects/Visits__c/fields/Next_Visit_ID__c.field-meta.xml
<CustomField>
    <fullName>Next_Visit_ID__c</fullName>
    <label>Next Visit ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>