objects/Visits__c/fields/Not_Reported_By_A_Technician__c.field-meta.xml
<CustomField>
    <fullName>Not_Reported_By_A_Technician__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Reported By A Technician</label>
    <type>Checkbox</type>
</CustomField>