objects/Visits__c/fields/Notes_from_Previous_Service__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_Previous_Service__c</fullName>
    <inlineHelpText>If the technician entered any notes on the previous service sheet in the &quot;Notes for next service&quot; box they will appear here.</inlineHelpText>
    <label>Notes from Previous Service</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>