objects/Visits__c/fields/Notes_to_Service__c.field-meta.xml
<CustomField>
    <fullName>Notes_to_Service__c</fullName>
    <label>Notes to Service</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>