objects/Visits__c/fields/November__c.field-meta.xml
<CustomField>
    <fullName>November__c</fullName>
    <label>November</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>