objects/Visits__c/fields/Number_of_Days_on_this_Service__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_on_this_Service__c</fullName>
    <inlineHelpText>Please fill this out if this is a multi-day service</inlineHelpText>
    <label>Number of Days on this Service</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>