objects/Visits__c/fields/Number_of_Recurring_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Recurring_Days__c</fullName>
    <label>Number of Recurring Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>