objects/Visits__c/fields/Number_of_Recurring_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Recurring_Visits__c</fullName>
    <inlineHelpText>Enter the Number of Recurring visit Messages days</inlineHelpText>
    <label>Number of Recurring Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>