objects/Visits__c/fields/OOH_Hints_Tips__c.field-meta.xml
<CustomField>
    <fullName>OOH_Hints_Tips__c</fullName>
    <label>OOH Hints &amp; Tips</label>
    <length>100</length>
    <type>Text</type>
</CustomField>