objects/Visits__c/fields/Opportunity_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Opportunity - 2</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Visits (Opportunity - 2)</relationshipLabel>
    <relationshipName>Visits3</relationshipName>
    <type>Lookup</type>
</CustomField>