objects/Visits__c/fields/Opportunity_3__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Opportunity - 3</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Visits (Opportunity - 3)</relationshipLabel>
    <relationshipName>Visits4</relationshipName>
    <type>Lookup</type>
</CustomField>