objects/Visits__c/fields/Opportunity_4__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Opportunity - 4</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Visits (Opportunity - 4)</relationshipLabel>
    <relationshipName>Visits5</relationshipName>
    <type>Lookup</type>
</CustomField>