objects/Visits__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <label>Opportunity ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>