objects/Visits__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>