objects/Visits__c/fields/Original_Actual_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Actual_Service_Date__c</fullName>
    <inlineHelpText>This captures the value of the actual service date when it is first set. After that this will not change. Booking status warns if this is more than 60 days before the actual service date. ( NOTE the original capture was on 21/10/2013 )</inlineHelpText>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>