objects/Visits__c/fields/Originator__c.field-meta.xml
<CustomField>
    <fullName>Originator__c</fullName>
    <label>Originator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chester Boyt</fullName>
            </value>
            <value>
                <fullName>Ralph Boyt</fullName>
            </value>
            <value>
                <fullName>John Boyt</fullName>
            </value>
            <value>
                <fullName>Tim Boyt</fullName>
            </value>
            <value>
                <fullName>Chaz Sidhu</fullName>
            </value>
            <value>
                <fullName>Ray Watts</fullName>
            </value>
            <value>
                <fullName>Michael</fullName>
            </value>
            <value>
                <fullName>Nigel Dowding</fullName>
            </value>
            <value>
                <fullName>Lorna Welch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>