objects/Visits__c/fields/Overdue_Visit_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Visit_Check_Date__c</fullName>
    <description>This captures the value of the actual service date when it is first set.The field to behave exactly like the Original Actual Visit Date field, the field has to be editable.</description>
    <label>Overdue Visit Check Date</label>
    <type>Date</type>
</CustomField>