objects/Visits__c/fields/Parking_Info__c.field-meta.xml
<CustomField>
    <fullName>Parking_Info__c</fullName>
    <formula>Site__r.Parking_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parking Information</label>
    <type>Text</type>
</CustomField>