objects/Visits__c/fields/Parts__c.field-meta.xml
<CustomField>
    <fullName>Parts__c</fullName>
    <label>Parts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>