objects/Visits__c/fields/Parts_Cost__c.field-meta.xml
<CustomField>
    <fullName>Parts_Cost__c</fullName>
    <inlineHelpText>To be completed by Projects / Service.</inlineHelpText>
    <label>Actual Parts Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>