objects/Visits__c/fields/Parts_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Parts_Ordered__c</fullName>
    <label>Parts Ordered?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>