objects/Visits__c/fields/Parts_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Parts_Serial_Number__c</fullName>
    <label>Parts Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>