objects/Visits__c/fields/PartsTotalCalculation__c.field-meta.xml
<CustomField>
    <fullName>PartsTotalCalculation__c</fullName>
    <label>PartsTotalCalculation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>