objects/Visits__c/fields/Planned_GP_Margin__c.field-meta.xml
<CustomField>
    <fullName>Planned_GP_Margin__c</fullName>
    <inlineHelpText>To be completed by Sales.</inlineHelpText>
    <label>Planned GP Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>