objects/Visits__c/fields/PM_Cost__c.field-meta.xml
<CustomField>
    <fullName>PM_Cost__c</fullName>
    <label>PM Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>