objects/Visits__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO</label>
    <referenceTo>PO__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>