objects/Visits__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <label>Postcode Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>