objects/Visits__c/fields/Postcode_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Prefix__c</fullName>
    <formula>MID( Site__r.ShippingPostalCode ,1,find(&quot; &quot;,Site__r.ShippingPostalCode ,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postcode Prefix</label>
    <type>Text</type>
</CustomField>