objects/Visits__c/fields/Previous_Actual_GP_Margin__c.field-meta.xml
<CustomField>
    <fullName>Previous_Actual_GP_Margin__c</fullName>
    <label>Previous Actual GP Margin</label>
    <type>TextArea</type>
</CustomField>