objects/Visits__c/fields/Previous_Visit__c.field-meta.xml
<CustomField>
    <fullName>Previous_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the visit that created this one.</inlineHelpText>
    <label>Previous Visit</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Next Visit(s)</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>