objects/Visits__c/fields/Previous_Visit_Call_Out__c.field-meta.xml
<CustomField>
    <fullName>Previous_Visit_Call_Out__c</fullName>
    <formula>TEXT( Previous_Visit__r.Call_Out_Types__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Visit Call Out</label>
    <type>Text</type>
</CustomField>