objects/Visits__c/fields/Previous_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Visit_Date__c</fullName>
    <formula>Previous_Visit__r.Actual_Service_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Visit Date</label>
    <type>Date</type>
</CustomField>