objects/Visits__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>