objects/Visits__c/fields/Primary_Actual_Fault_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Actual_Fault_Type__c</fullName>
    <label>Call Notes-Internal</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>