objects/Visits__c/fields/Primary_Reported_Fault_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reported_Fault_Type__c</fullName>
    <label>Client Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>