objects/Visits__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>RED, AMBER &amp; GREEN to be used by Sales only.
RED = Contacted in 12 working hours.
AMBER = Contacted in 3-4 working days.
GREEN = Contacted in 7 working days.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 Hour</fullName>
            </value>
            <value>
                <fullName>8 Hour</fullName>
            </value>
            <value>
                <fullName>24 Hour</fullName>
            </value>
            <value>
                <fullName>3 Day</fullName>
            </value>
            <value>
                <fullName>5 Day</fullName>
            </value>
            <value>
                <fullName>10 Day</fullName>
            </value>
            <value>
                <fullName>Date Specific</fullName>
            </value>
            <value>
                <fullName>RED</fullName>
            </value>
            <value>
                <fullName>AMBER</fullName>
            </value>
            <value>
                <fullName>GREEN</fullName>
            </value>
            <value>
                <fullName>2 Hour</fullName>
            </value>
            <value>
                <fullName>1 Hour</fullName>
            </value>
            <value>
                <fullName>Diamond Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>