objects/Visits__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <label>Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Joel Bidmead</fullName>
            </value>
            <value>
                <fullName>Natasha Blake</fullName>
            </value>
            <value>
                <fullName>Nigel Welch</fullName>
            </value>
            <value>
                <fullName>Paul Faraway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>