objects/Visits__c/fields/Project_Sheet_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Sheet_Number__c</fullName>
    <label>Project Sheet Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>