objects/Visits__c/fields/Punch_In__c.field-meta.xml
<CustomField>
    <fullName>Punch_In__c</fullName>
    <label>Punch In</label>
    <length>100</length>
    <type>Text</type>
</CustomField>