objects/Visits__c/fields/Punch_In_and_Out__c.field-meta.xml
<CustomField>
    <fullName>Punch_In_and_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Punch In and Out</label>
    <type>Checkbox</type>
</CustomField>