objects/Visits__c/fields/Punch_Out__c.field-meta.xml
<CustomField>
    <fullName>Punch_Out__c</fullName>
    <label>Punch Out</label>
    <length>100</length>
    <type>Text</type>
</CustomField>