objects/Visits__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <inlineHelpText>If there is a specific purchase order number for this visit,please put it here.If this is blank,as soon as the visit is edited, the PO(if there is one) from the Site or the Customer will be used.
If mandatory, yet a P/O is not required, enter a dot (.).</inlineHelpText>
    <label>Purchase Order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>