objects/Visits__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>