objects/Visits__c/fields/Quotation_Reference__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Reference__c</fullName>
    <label>Quotation Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>