objects/Visits__c/fields/Reactive_Sheet_Number__c.field-meta.xml
<CustomField>
    <fullName>Reactive_Sheet_Number__c</fullName>
    <inlineHelpText>This field is populated by an automatic trigger to help with reporting. If a hard copy sheet is used, please ensure that the sheet number is entered into this box.</inlineHelpText>
    <label>Maintenance &amp; Reactive Sheet Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>