objects/Visits__c/fields/Reason_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Reason_Cancelled__c</fullName>
    <inlineHelpText>please enter a reason for cancelling this visit.</inlineHelpText>
    <label>Reason Cancelled</label>
    <type>TextArea</type>
</CustomField>