objects/Visits__c/fields/Reason_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Reason_Rejected__c</fullName>
    <label>Reason Rejected</label>
    <type>TextArea</type>
</CustomField>