objects/Visits__c/fields/Recent_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Recent_Sheet__c</fullName>
    <label>Recent Sheet</label>
    <length>100</length>
    <type>Text</type>
</CustomField>