objects/Visits__c/fields/Requested_Attendance_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Attendance_Time__c</fullName>
    <inlineHelpText>Enter the time the technician should attend this Visit in the format - HH:MM</inlineHelpText>
    <label>Required On Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00:00</fullName>
            </value>
            <value>
                <fullName>00:30</fullName>
            </value>
            <value>
                <fullName>01:00</fullName>
            </value>
            <value>
                <fullName>01:30</fullName>
            </value>
            <value>
                <fullName>02:00</fullName>
            </value>
            <value>
                <fullName>02:30</fullName>
            </value>
            <value>
                <fullName>03:00</fullName>
            </value>
            <value>
                <fullName>03:30</fullName>
            </value>
            <value>
                <fullName>04:00</fullName>
            </value>
            <value>
                <fullName>04:30</fullName>
            </value>
            <value>
                <fullName>05:00</fullName>
            </value>
            <value>
                <fullName>05:30</fullName>
            </value>
            <value>
                <fullName>06:00</fullName>
            </value>
            <value>
                <fullName>06:30</fullName>
            </value>
            <value>
                <fullName>07:00</fullName>
            </value>
            <value>
                <fullName>07:30</fullName>
            </value>
            <value>
                <fullName>08:00</fullName>
            </value>
            <value>
                <fullName>08:30</fullName>
            </value>
            <value>
                <fullName>09:00</fullName>
            </value>
            <value>
                <fullName>09:30</fullName>
            </value>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>10:30</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>11:30</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>12:30</fullName>
            </value>
            <value>
                <fullName>13:00</fullName>
            </value>
            <value>
                <fullName>13:30</fullName>
            </value>
            <value>
                <fullName>14:00</fullName>
            </value>
            <value>
                <fullName>14:30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>