objects/Visits__c/fields/Required_On_Site__c.field-meta.xml
<CustomField>
    <fullName>Required_On_Site__c</fullName>
    <label>Required On Site</label>
    <type>Date</type>
</CustomField>