objects/Visits__c/fields/Required_on_Site_Time__c.field-meta.xml
<CustomField>
    <fullName>Required_on_Site_Time__c</fullName>
    <formula>DATETIMEVALUE( TEXT( Actual_Service_Date__c )  &amp;&quot; &quot;&amp; 
TEXT(VALUE(LEFT (TEXT(Requested_Attendance_Time__c),2)))
&amp;&quot;:&quot;&amp;
TEXT(VALUE(RIGHT(TEXT(Requested_Attendance_Time__c),2)))&amp;&quot;:00&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required on Site Time</label>
    <type>DateTime</type>
</CustomField>