objects/Visits__c/fields/Required_Visit_On_Site__c.field-meta.xml
<CustomField>
    <fullName>Required_Visit_On_Site__c</fullName>
    <label>Required Visit On Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>