objects/Visits__c/fields/Required_Visit_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Required_Visit_Schedule__c</fullName>
    <label>Required Visit Schedule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>