objects/Visits__c/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <label>Response Time</label>
    <type>DateTime</type>
</CustomField>