objects/Visits__c/fields/Sales_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sale Opportunity Number</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Visits (Sales Opportunity)</relationshipLabel>
    <relationshipName>Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>