objects/Visits__c/fields/Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity__r.Sales_Type__c, &apos;&apos;),&apos;&apos;,IF(ISPICKVAL(Opportunity__r.Sales_Type__c, &apos;Service&apos;),&apos;Service&apos;,&apos;Project&apos;))</formula>
    <label>Sales Type</label>
    <type>Text</type>
</CustomField>