objects/Visits__c/fields/Schedule_Visit_On_Site__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Visit_On_Site__c</fullName>
    <label>Schedule Visit On Site</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>